[package]
name = "mf2tar"
version = "0.1.0"
authors = ["Patrick Mooney <pmooney@oxide.computer>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.clap]
version = "2.33.0"
default-features = false
[dependencies.tar]
version = "0.4.26"
default-features = false
